<resources>
    <string name="app_name">BWA Mov</string>
    <string name="lewati_perkenalan">Lewati Perkenalan</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="now_playing">Now Playing</string>
    <string name="no_playing_desc">Lebih mudah untuk mengetahui \nfilm yang sedang tampil</string>
    <string name="pre_sale">Pre Sale</string>
    <string name="pre_sale_desc">Tidak khawatir ketinggalan \nupdate film terbaru</string>
    <string name="cashless">Cashless</string>
    <string name="chasless_desc">Gunakan E-wallet untuk \ntransaksi nonton</string>
    <string name="username">Username</string>
    <string name="masukkan_esername">iqbal tamrin</string>
    <string name="sing_in">Login</string>
    <string name="password">Password</string>
    <string name="masukkan_password">Fais@l1234</string>
    <string name="masuk_akun">Masuk Akun</string>
    <string name="daftar_akun">Daftar Akun Baru</string>
    <string name="signup">SignUp</string>
    <string name="nama">Nama</string>
    <string name="masukkan_nama_anda">iqbal tamrin</string>
    <string name="email_address">Email Address</string>
    <string name="masukkan_email_anda">Masukkan Email Anda</string>
    <string name="photo">Photo</string>
    <string name="welcome">Welcome, \n Iqbal Tamrin</string>
    <string name="simpan_dan_lanjutkan">Simpan Dan Lanjutkan</string>
    <string name="upload_nanti">Upload Nanti</string>
    <string name="idr">IDR 200.000</string>
    <string name="coming_soon">COMING SOON</string>
    <string name="avenger_invinity">Avenger: Infinity War</string>
    <string name="action_scyi_fi_kids">Action, Sci Fi, Kids</string>
    <string name="storyboard">Storyboard</string>
    <string name="whoplayer">Who Player</string>
    <string name="pilihbangku">Pilih Bangku</string>
    <string name="storyboard_desc">It is a long established fact that a reader will be distracted by \nthe readable content of a page when looking at its layout. \nThe point of using Lorem Ipsum is that it has a more-or-less normal \ndistribution of letters, as opposed to using making it look like readable English.</string>
    <string name="image">TODO</string>
    <string name="alita_beatle">Alita Beatle</string>
    <string name="pilih_bangku">Pilih Bangku</string>
    <string name="layar_bioskop">Layar Bioskop</string>
    <string name="empty">Empty</string>
    <string name="booked">Booked</string>
    <string name="selected">Selected</string>
    <string name="bayar_sekarang">Bayar Sekarang</string>
    <string name="batalkan">Batalkan</string>
    <string name="checkout">Checkout</string>
    <string name="when">When</string>
    <string name="date_time">Tanggal Dan Waktu</string>
    <string name="cinema">Cinema</string>
    <string name="tanggal">17 Agustus 2022</string>
    <string name="alamat_checkout">Mal XX1 Makassar,Sulsel</string>
    <string name="time">Time</string>
    <string name="items">Items</string>
    <string name="idr_ticker">IDR 70.000</string>
    <string name="nomor_kursi">Set No C2</string>
    <string name="e_wallet">E-Wallet</string>
    <string name="total_balance">Total Balance</string>
    <string name="total_harga_dibayar">Total Harga Dibayar</string>
    <string name="editprofile">Edit Profile</string>
    <string name="simpandatbaru">Simpan Data Baru</string>
    <string name="my_wallet">My Wallet</string>
    <string name="user_not_found">User Tidak Ditemukan</string>
    <string name="user_not_founds">dfsdfsf</string>
    <string name="password_anda_salah">Password Anda Salah</string>
    <string name="user_not_founded">User Tidak Ditemukan</string>
    <string name="action">Action</string>
    <string name="onboarding">onboarding</string>
    <string name="status">status</string>
    <string name="one">1</string>
    <string name="user">User</string>
    <string name="masukkan_username_anda">Masukkan Username Anda</string>
    <string name="masukkan_password_anda">Masukkan Password Anda</string>
    <string name="any">""</string>
    <string name="login_berhasil">Login Berhasil</string>
    <string name="url">url</string>
    <string name="saldo">saldo</string>
    <string name="email">email</string>
    <string name="loading">Loading</string>
    <string name="masukkan_nama_lengkap_anda">Masukkan Nama Lengkap Anda</string>
    <string name="user_sudah_digunakan">User Sudah Digunakan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="selamat_datang">Selamat Datang \n</string>


</resources>